@@ -10,12 +10,12 @@
 
 DROP TABLE IF EXISTS questions;
 CREATE TABLE questions (
-  uid int(16) NOT NULL default '0',
+  uid integer NOT NULL default '0',
   question varchar(120) NOT NULL,
-  examples int(1) NOT NULL default '0',
-  answers int(1) NOT NULL default '0',
-  commentable int(1) NOT NULL default '0',
-  ask_email int(1) NOT NULL default '0',
+  examples integer NOT NULL default '0',
+  answers integer NOT NULL default '0',
+  commentable integer NOT NULL default '0',
+  ask_email integer NOT NULL default '0',
   PRIMARY KEY  (uid)
 ) TYPE=MyISAM;
 
@@ -25,3 +25,4 @@ CREATE TABLE questions (
 
 INSERT INTO questions VALUES (0,'What\'s in a namespace?','0','0','1','0');
 INSERT INTO questions VALUES (1,'A question with an example','1','1','1','0');
+
